shtns/shtns.h

/// pointer to data structure describing an SHT, returned by shtns_init() or shtns_create().
typedef struct shtns_info* shtns_cfg;
/// Different Spherical Harmonic normalizations. See also section \ref norm for details.
enum shtns_norm {
	sht_orthonormal,	///< orthonormalized spherical harmonics (default).
	sht_fourpi,			///< Geodesy and spectral analysis : 4.pi normalization.
	sht_schmidt,		///< Schmidt semi-normalized : 4.pi/(2l+1)
	sht_for_rotations	///< \internal normalization to generate wigner-d matrices internally, with otherwise limited functionality.
};
/// different SHT types and algorithms
enum shtns_type {
	sht_gauss,		///< use <b>gaussian grid</b> and quadrature. Allows on-the-fly or matrix-based algorithms.
	sht_auto,		///< use fastest algorithm and grid. This currently implies using the Gauss grid and is thus the same as sht_gauss.
	sht_reg_fast,	///< quick initialization of a <b>regular grid</b>. The grid is the same as with sht_reg_dct
	sht_reg_dct,	///< slow initialization of a regular grid (self-tuning). The grid is equispaced and avoids the poles (Féjer quadrature).
	sht_quick_init, ///< gauss grid, with minimum initialization time (useful for pre/post-processing)
	sht_reg_poles,	///< quick initialization of a <b>regular grid including poles</b> (Clenshaw-Curtis quadrature). Useful for vizualisation.
	sht_gauss_fly	///< legendre polynomials are recomputed on-the-fly for each transform (may be faster on some machines, saves memory and bandwidth).
};
/// Defines the sizes of the spectral description. Use for advanced initialization.
shtns_cfg shtns_create(int lmax, int mmax, int mres, enum shtns_norm norm);
/// Precompute everything for a given spatial grid. Use for advanced initialization, after \ref shtns_create.
int shtns_set_grid(shtns_cfg, enum shtns_type flags, double eps, int nlat, int nphi);
void shtns_free(void* p);			///< free memory allocated with \ref shtns_malloc